# Raw-Logger

./: .env.example  .gitignore  .logcorr.toml.example  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  setup.cfg
log_correlation_agent/: __init__.py  config.py  graph.py  logger.py  main.py  state.py
log_correlation_agent/ingestion/: __init__.py  fingerprint.py  queue_manager.py  sampler.py  worker_pool.py
log_correlation_agent/llm/: gemini_adapter.py
log_correlation_agent/nodes/: __init__.py  alert_correlator.py  alert_manager.py  anomaly_detector.py  correlation_engine.py  heuristic_reducer.py  ingestor.py  llm_reasoner.py  pattern_matcher.py  query_router.py  response_formatter.py
log_correlation_agent/normalization/: timestamp.py
log_correlation_agent/parsers/: __init__.py  factory.py  json_parser.py  llm_fuzzy_parser.py  regex_parser.py  sanitizer.py
log_correlation_agent/timeline/: __init__.py  buffer.py  queries.py  schema.py
log_correlation_agent/tools/: __init__.py  file_tools.py
log_correlation_agent/watcher/: __init__.py  manager.py  rotation.py  stitcher.py  tail.py
tests/: conftest.py  test_core.py
