[project]
name = "rawlogger-cli"
version = "0.1.0"
description = "A local-first CLI tool for correlating logs across multiple services"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3.74,<1.0",
    "watchdog>=4.0",
    "google-generativeai>=0.7",
    "structlog>=24.1",
    "tenacity>=8.3",
    "toml>=0.10",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rawlogger = "log_correlation_agent.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
